<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Tip">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/subtotal"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@color/black"
         android:fontFamily="sans-serif-condensed-medium"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="38dp"
         android:layout_marginStart="28dp"
         android:id="@+id/tv_subtotal"/>

    <EditText
        android:id="@+id/et_base_amount"
        android:layout_width="0dp"
        android:text="@string/_0_0"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:autofillHints="100"
        android:hint="@string/_100"
        android:inputType="numberDecimal"
        android:minWidth="48dp"
        android:layout_marginEnd="44dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_subtotal"
        app:layout_constraintStart_toEndOf="@id/tv_subtotal"
        app:layout_constraintTop_toTopOf="@id/tv_subtotal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintTop_toBottomOf="@id/tv_subtotal"
        android:layout_marginTop="48dp"
        android:layout_marginStart="28dp"
        android:id="@+id/tip_percent"/>
    
    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="30"
        android:progressTint="?attr/colorPrimary"
        android:thumbTint="@color/e"
        app:layout_constraintStart_toEndOf="@id/tip_percent"
        android:layout_marginStart="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="68dp"
        app:layout_constraintTop_toTopOf="@id/tip_percent"
        app:layout_constraintBottom_toBottomOf="@id/tip_percent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/emoji_tv"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="@id/tip_percent"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        android:layout_marginTop="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="?attr/colorPrimary"
        android:id="@+id/tip_percent_tv"
        app:layout_constraintStart_toEndOf="@id/seekBar"
        app:layout_constraintTop_toTopOf="@id/seekBar"
        app:layout_constraintBottom_toBottomOf="@id/seekBar"
        android:layout_marginStart="8dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintTop_toBottomOf="@id/emoji_tv"
        android:layout_marginTop="48dp"
        android:layout_marginStart="28dp"
        android:id="@+id/tip_amount_tv"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tip_val"
      app:layout_constraintStart_toEndOf="@id/tip_amount_tv"
      app:layout_constraintTop_toTopOf="@id/tip_amount_tv"
      app:layout_constraintBottom_toBottomOf="@id/tip_amount_tv"
      android:textColor="?attr/colorPrimary"
      android:textSize="20sp"
      android:layout_marginStart="28dp"
      android:id="@+id/tip_amount_val"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tip_amount_tv"
        android:layout_marginTop="48dp"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:id="@+id/no_people_tv"
        android:fontFamily="sans-serif-condensed-medium"/>

    <Spinner
        android:id="@+id/countSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:minHeight="48dp"
        android:layout_marginEnd="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/no_people_tv"
        app:layout_constraintStart_toEndOf="@id/no_people_tv"
        app:layout_constraintTop_toTopOf="@id/no_people_tv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_payable_tv"
        android:layout_marginTop="48dp"
        android:textSize="20sp"
        android:text="@string/tip_val"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/no_people_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/total_payable_tv"
        app:layout_constraintTop_toBottomOf="@id/total_payable_tv"
        android:text="@string/each"
        android:textSize="16sp"
        android:textColor="@color/black"/>







</androidx.constraintlayout.widget.ConstraintLayout>