<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:id="@+id/appBar"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:id="@+id/dark_mode"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_weight="1.5"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:id="@+id/mode_changer"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:thumb="@drawable/tracks"
            app:track="@drawable/track"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/dark_mode"
        android:background="?attr/colorPrimary"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>